RESOLVED FIXED61288
[Qt] When opening a combo-box the popup renders badly.
https://bugs.webkit.org/show_bug.cgi?id=61288
Summary [Qt] When opening a combo-box the popup renders badly.
Alexis Menard (darktears)
Reported 2011-05-23 08:29:44 PDT
Go to any website with a combo-box opens it and it renders really bad. On Mac it's not reproducible with Mac style but with plastique. On Linux it's broken too with plastique or even with Oxygen.
Attachments
patch (2.83 KB, patch)
2011-05-23 11:41 PDT, Luiz Agostini
kling: review+
Luiz Agostini
Comment 1 2011-05-23 11:41:29 PDT
Andreas Kling
Comment 2 2011-05-23 11:42:50 PDT
Comment on attachment 94450 [details] patch I think there was something stupid in my breakfast that day.. r=me
Luiz Agostini
Comment 3 2011-05-23 11:53:43 PDT
M Source/WebKit/qt/ChangeLog M Source/WebKit/qt/WebCoreSupport/QtFallbackWebPopup.cpp Committed r87087
Ademar Reis
Comment 4 2011-05-23 12:17:56 PDT
Revision r87087 cherry-picked into qtwebkit-2.2 with commit 27c2c6c <http://gitorious.org/webkit/qtwebkit/commit/27c2c6c>
Note You need to log in before you can comment on or make changes to this bug.