[Qt] When opening a combo-box the popup renders badly. https://bugs.webkit.org/show_bug.cgi?id=61288

Reviewed by Andreas Kling.

Removing combobox palette changes from QtFallbackWebPopup::show() because they
are causing rendering problems for some styles.

The changes in palette are not needed because the background and foreground
colors are already set by QStandardItem::setBackground() and QStandardItem::setForeground()
in method QtFallbackWebPopup::populate().

* WebCoreSupport/QtFallbackWebPopup.cpp:
(WebCore::QtFallbackWebPopup::show):

Canonical link: https://commits.webkit.org/76671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87087 268f45cc-cd09-0410-ab3c-d52691b4dbfc